[gd_scene load_steps=4 format=3 uid="uid://b2dmsrk6j12y4"]

[ext_resource type="Script" path="res://Scripts/solana_service.gd" id="1_hwc3u"]
[ext_resource type="FontFile" uid="uid://inxwmykjoa5p" path="res://Fonts/Circus Of Innocents.ttf" id="2_pwb74"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qjeht"]
bg_color = Color(0.34902, 0.360784, 0.482353, 1)

[node name="SolanaService" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hwc3u")
custom_rpc = "https://rpc.hellomoon.io/6b758f53-4b78-41a7-86a9-6b61c97711eb"

[node name="PhantomController" type="PhantomController" parent="."]

[node name="OverlayLayer" type="CanvasLayer" parent="."]
layer = 10

[node name="TransactionOverlay" type="Control" parent="OverlayLayer"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Background" type="Panel" parent="OverlayLayer/TransactionOverlay"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qjeht")

[node name="SigningLabel" type="Label" parent="OverlayLayer/TransactionOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -294.5
offset_top = -123.0
offset_right = 294.5
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_pwb74")
theme_override_font_sizes/font_size = 91
text = "Signing Transaction..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoginOverlay" type="Control" parent="OverlayLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Background" type="Panel" parent="OverlayLayer/LoginOverlay"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_qjeht")

[node name="SigningLabel" type="Label" parent="OverlayLayer/LoginOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -294.5
offset_top = -123.0
offset_right = 294.5
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_pwb74")
theme_override_font_sizes/font_size = 91
text = "Logging in, please wait..."
horizontal_alignment = 1
vertical_alignment = 1
